--- a/public_html/HelloDjango/templates/base.html
+++ b/public_html/HelloDjango/templates/base.html
@@ -40,7 +40,7 @@
         </nav>
 
 
-{#        <script src="{% static "admin/js/scripts/bootstrap.bundle.min.js" %}"></script>#}
+        <script src="{% static "admin/js/scripts/bootstrap.bundle.min.js" %}"></script>
         <script src="{% static "admin/js/scripts/jquery-3.6.3.min.js" %}"></script>
         {% block script %}
         {% endblock %}
