--- a/public_html/HelloDjango/templates/REDIRECT.html
+++ b/public_html/HelloDjango/templates/REDIRECT.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
 </head>
 <body>
-    <div class="container ">
-        <div class="row ">
-        <div class="col-auto ">
+    <div class="container container-sm ">
+        <div >
+        <div >
         <div class="card shadow-lg position-absolute translate-middle start-50 top-50" style=" background-color: rgba(247,247,248,0.75)">
           <div class="card-body">
-              <h5 class="card-title fw-bold " style="text-align: center">
+              <h5 class="card-title fw-bold text-center" style="text-align: center">
                   Приложение переместилось
               </h5>
               <hr>
