--- a/public_html/HelloDjango/templates/REDIRECT.html
+++ b/public_html/HelloDjango/templates/REDIRECT.html
@@ -1,15 +1,24 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Приложение переместилось</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
-</head>
-<body>
-    <div class="container container-sm ">
-        <div >
-        <div >
-        <div class="card shadow-lg position-absolute translate-middle start-50 top-50" style=" background-color: rgba(247,247,248,0.75)">
+<!doctype html>
+<html lang="en" >
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <title>KIP Task Manager</title>
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300&display=swap" rel="stylesheet">
+    </head>
+        {% load static %}
+    <body >
+
+
+        <div class="container ">
+
+        <div class="card shadow-lg  position-absolute translate-middle-x start-50 mt-5" style=" background-color: rgba(247,247,248,0.75)">
           <div class="card-body">
               <h5 class="card-title fw-bold text-center" style="text-align: center">
                   Приложение переместилось
@@ -23,7 +32,7 @@
           </div>
         </div>
         </div>
-    </div>
-    </div>
-</body>
+
+
+    </body>
 </html>
