--- a/public_html/HelloDjango/templates/REDIRECT.html
+++ b/public_html/HelloDjango/templates/REDIRECT.html
@@ -24,10 +24,10 @@
                   Приложение переместилось
               </h5>
               <hr>
-                    <h6 class="card-text">Теперь приложение находиться по адрессу: </h6>
+                    <h6 class="card-text">Теперь приложение находится по адресу: </h6>
             <h4 class="card-text text-center"><a href="http://kiptechb.vh87.hosterby.com/" class="" aria-current="page"> kiptech.by </a></h4>
               <hr>
-            <h6 class="card-text text-center">Логины и пороли остались прежними</h6>
+            <h6 class="card-text text-center">Логины и пароли остались прежними</h6>
 
           </div>
         </div>
