--- a/public_html/HelloDjango/templates/conflict_correction.html
+++ b/public_html/HelloDjango/templates/conflict_correction.html
@@ -23,7 +23,7 @@
                     <input id="io_vehicle_{{ forloop.counter }}" type="hidden"   value="{{ v.technic_driver.technic.name.name }}"/>
                     <select class=" col-4 input_tech" id="input_tech_{{ forloop.counter }}" name="vehicle_{{ v.id }}">
                         {% for u in uniq_name_of_vehicles %}
-                    <option {% if u.name in conflicts_vehicles_list %} style="color: blue" {% endif %} value="{{ u }}">{{ u }}</option>
+                    <option {% if u.0 in conflicts_vehicles_list %} style="color: blue" {% endif %} value="{{ u.0 }}">{{ u.0 }}</option>
                          {% endfor %}
                     </select>
 
