add priority_list in today_app

--- a/public_html/HelloDjango/templates/today_applications.html
+++ b/public_html/HelloDjango/templates/today_applications.html
@@ -36,14 +36,14 @@
                     >{{ v.0 }} ({{ v.1 }})  </label>
                         {% for d in v.2 %}
 
-                        <div class=" conteiner-fluid form-floating row mt-1">
+                        <div class=" conteiner-fluid form-floating row mt-1 ">
                         <input type="hidden" name="prior_id" value="{{ d.id }}"/>
                             <div class="input-group form-floating p-0">
                                 {% if post == 'admin' %}
 
-                                <span class="input-group-text">
+                                <span class="input-group-text {% if d.id in priority_list %} border border-2 border-primary{% endif %}">
                                 <input type="number" min="1" id="priority_{{ d.id }}" name="priority"
-                               class="priority  col-auto  " value="{{ d.priority }}" style="max-width: 50px; margin-left: -5px;"/>
+                               class="priority   col-auto  " value="{{ d.priority }}" style="max-width: 50px; margin-left: -5px;"/>
                                 </span>
 
                                 {% endif %}
