add "sent" status

--- a/public_html/HelloDjango/templates/main.html
+++ b/public_html/HelloDjango/templates/main.html
@@ -4,6 +4,7 @@
 {% if post == 'admin' %}
     {% if conflicts_vehicles_list %}<a href="{% url 'conflict_resolution' cw_day %}" class="btn btn-sm btn-danger ">Недостаток техники</a>
      {% elif not conflicts_vehicles_list and submitted_app_list %}<a href="{% url 'approv_all_applications' cw_day %}" class="btn btn-sm btn-success ">Одобрить все заявки</a>
+     {% elif not conflicts_vehicles_list and send_app_list %}<a href="{% url 'send_all_applications' cw_day %}" class="btn btn-sm btn-warning ">Отправить все заявки</a>
     {% else %}{% endif %}
 {% elif post == 'foreman' or 'master' or 'employee_supply' %}
     {% if saved_app_list %}
@@ -39,17 +40,15 @@
 
         <div class="card shadow-lg
             {% if  a.app_today.status.status  == 'Сохранена' %}
-                border-warning
+                border border-3 border-warning
             {% elif a.app_today.status.status == 'Одобрена' %}
-                border-success
+                border border-3 border-success
             {% elif a.app_today.status.status == 'Подана' %}
-                border-primary
-            {% else %}
-                border-dark
+                border border-3 border-primary
             {% endif %}
 
             "
-             style="width: 18rem; margin-bottom:15px; background-color: rgba(247,247,248,0.75)">
+             style="width: 18rem; margin-bottom:15px; background-color: rgba(248,248,247,0.75)">
 
           <label style="white-space: nowrap" class="position-absolute top-0 start-50 translate-middle bg-white rounded border border-2
                 {% if  a.app_today.status.status  == 'Сохранена' %}
@@ -96,9 +95,9 @@
                 <a href="{% url 'add_application' a.app_today.id %}" class="btn btn-outline-primary  m-1" aria-current="page"><i class="fa-regular fa-pen-to-square"></i></a>
                 <a href="{% url 'clear_application' a.app_today.id %}" class="btn btn-outline-danger  m-1" aria-current="page"><i class="fa-solid fa-trash"></i></a>
                 {% if  a.app_today.status.status  == 'Сохранена' or post  == 'admin' and a.app_today.status.status  == 'Подана' %}
-{#                    {% if not post == "Снабжение" %}#}
                 <a href="{% url 'success_application' a.app_today.id %}" class="btn btn-outline-success  m-1" aria-current="page"><i class="fa-solid fa-check"></i></a>
-{#                    {% endif %}#}
+                {% elif post  == 'admin' and a.app_today.status.status  == 'Одобрена' %}
+                <a href="{% url 'success_application' a.app_today.id %}" class="btn btn-outline-warning  m-1" aria-current="page"><i class="fa-solid fa-paper-plane"></i></a>
                 {% endif %}
                 {% if user.username == 'admin' %}
                 <div class="dropup">
