fix: hide  inf for hoswork

--- a/public_html/HelloDjango/templates/driver_app_list.html
+++ b/public_html/HelloDjango/templates/driver_app_list.html
@@ -34,8 +34,10 @@
 
             {% for a in app %}
                 <hr>
+          {% if a.app_for_day.construction_site.foreman.user.last_name %}
               <h6 class="card-text fw-bold">{{ a.technic_driver.technic.name.name }}</h6>
                 <h6 class="card-text"><b>{{ a.priority }})</b> {{ a.app_for_day.construction_site.address }} ({{a.app_for_day.construction_site.foreman.user.last_name}})</h6>
+                {% endif %}
                 {% if a.description %}
                 <textarea class="form-control app_description" readonly>{{ a.description }}</textarea>
                 {% endif %}
